# recipes_htmx

./: .gitignore  README.md  main.py  pyproject.toml
app/: exceptions.py
app/api/: recipe_manager.py  token_manager.py  user_manager.py  utils.py
app/models/: base.py  mixins.py  recipe.py  token.py  user.py
app/routers/: auth.py  recipes.py
app/schemas/: recipe.py
migrations/: env.py
migrations/versions/: 3e6ed7264870_added_recipe.py  72aaa88abdd2_create_user.py  a2fd4ec0072b_added_user.py  fee3cf108cb5_added_user_active_time.py
resources/: config.py
resources/templates/: auth_template.html  base_template.html  recipe_detail.html  recipes.html  verification_code_template.html
