[tool.poetry]
name = "recipes-htmx"
version = "0.1.0"
description = ""
authors = ["Akxary <pollxx97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.124.4"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.45"}
alembic = "^1.17.2"
aiosqlite = "^0.21.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.19.0"
black = "^25.12.0"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
explicit_package_bases = true
plugins = ['pydantic.mypy', 'sqlalchemy.ext.mypy.plugin']